2007-07-23  Daniel Kobras  <kobras@debian.org>

	* magick/delegate.c (UnixShellTextEscape): Fix fencepost error
	  when checking whether escaping is safe.

2007-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* INSTALL-unix.txt: Updated for release.
	* NEWS: Updated for pending 1.1.8 release.
	* Makefile.am: Retire VMS and MacOS 9 support from package.

2007-07-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am: Don't test PTIF format since it is not
	possible to pass the rwblob test and it is really an output driver
	rather than a format.
	* coders/tiff.c (WritePTIFImage): Update from HEAD.

2007-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (XWD_OVERFLOW): Eliminate check to see if
	unsigned type is less than zero.
	* coders/pnm.c (ValidateScalingIndex): Eliminate check to see if
	unsigned type is less than zero.
	* magick/log.c (LogMagickEvent): Even though log file name comes
	from a controlled source (log.mgk), perform safe numeric
	substitution on it.
	* coders/xwd.c (ReadXWDImage): Eliminate conflict between locally
	defined OVERFLOW macro and similarly named macro under Windows.

2007-07-18  Daniel Kobras  <kobras@debian.org>

	* coders/xwd.c (ReadXWDImage): Integer overflow fix
	(CVE-2007-1797).  From Debian patch
	xwd_integer_overflow_fixes_CVE-2007-1797.
	(ReadXWDImage): Fix for integer under/overflow.  From Debian patch
	xwd_overflow_fix.
	* coders/wpg.c (ReadWPGImage): WPG segfault fix.  From Debian
	patch wpg_segfault_fix.
	* coders/viff.c (ReadVIFFImage): Verify number of bands prior to
	using image.  From Debian patch viff_heap_corruption_fix.
	* coders/tiff.c (TIFFErrors): TIFF error reporting security fix.
	From Debian patch tiff_va_list_fix.
	* coders/sun.c (ReadSUNImage): Sun segfault fix.  From Debian
	patch sun_segfault_fix.
	* magick/blob.c (ReadBlobStream): Never try to read data beyond
	EOF in blob streams. Some (but not all) ReadBlob*() methods